--- a/index.html
+++ b/index.html
@@ -4,69 +4,66 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Il Tuo Nome - Portfolio</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f5f5f5;
-    }
-    header {
-      background-color: #2196F3;
-      color: #fff;
-      text-align: center;
-      padding: 20px;
-    }
-    section {
-      padding: 40px;
-    }
-    .project {
-      margin-bottom: 40px;
-    }
-    .project img {
-      max-width: 100%;
-      height: auto;
-    }
-    footer {
-      background-color: #212121;
-      color: #fff;
-      text-align: center;
-      padding: 10px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-    }
-  </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 </head>
-<body>
+<body class="blue-grey lighten-5">
 
-  <header>
-    <h1>Il Tuo Nome</h1>
-    <p>Web Developer</p>
-  </header>
+  <nav>
+    <div class="nav-wrapper blue darken-2">
+      <a href="#" class="brand-logo">Il Tuo Nome</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="#">Chi Sono</a></li>
+        <li><a href="#">Progetti</a></li>
+        <li><a href="#">Contattami</a></li>
+      </ul>
+    </div>
+  </nav>
 
-  <section>
-    <div class="project">
-      <h2>Progetto 1</h2>
-      <p>Descrizione del progetto 1.</p>
-      <img src="immagine_progetto1.jpg" alt="Progetto 1">
+  <div class="container">
+    <h1 class="center-align">Web Developer</h1>
+
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="card blue-grey darken-1">
+          <div class="card-content white-text">
+            <span class="card-title">Progetto 1</span>
+            <p>Descrizione del progetto 1.</p>
+          </div>
+          <div class="card-action">
+            <a href="#">Dettagli</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col s12 m6">
+        <div class="card blue-grey darken-1">
+          <div class="card-content white-text">
+            <span class="card-title">Progetto 2</span>
+            <p>Descrizione del progetto 2.</p>
+          </div>
+          <div class="card-action">
+            <a href="#">Dettagli</a>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class="project">
-      <h2>Progetto 2</h2>
-      <p>Descrizione del progetto 2.</p>
-      <img src="immagine_progetto2.jpg" alt="Progetto 2">
+  </div>
+
+  <footer class="page-footer blue darken-2">
+    <div class="container">
+      <p class="center-align white-text">&copy; 2023 Il Tuo Nome. Tutti i diritti riservati.</p>
     </div>
-
-    <!-- Aggiungi altri progetti secondo necessità -->
-
-  </section>
-
-  <footer>
-    <p>&copy; 2023 Il Tuo Nome. Tutti i diritti riservati.</p>
   </footer>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+  <script>
+    $(document).ready(function(){
+      $('.sidenav').sidenav();
+    });
+  </script>
 
 </body>
 </html>
