--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </nav>
 
   <div class="container">
-    <h1 class="center-align">Web Developer</h1>
+    <h1 class="center-align">Web Dev2eloper</h1>
 
     <div class="row">
       <div class="col s12 m6">
