--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   </nav>
 
   <div class="container">
-    <h1 class="center-align">Web Dev2eloper</h1>
+    <h1 class="center-align">Web Developer</h1>
 
     <div class="row">
       <div class="col s12 m6">
         <div class="card blue-grey darken-1">
           <div class="card-content white-text">
-            <span class="card-title">Progetto 1</span>
+            <span class="card-title">Proge1111tto 1</span>
             <p>Descrizione del progetto 1.</p>
           </div>
           <div class="card-action">
