--- a/index.html
+++ b/index.html
@@ -1,69 +1,60 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Il Tuo Nome - Portfolio</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio di SubTerane - Writer di Testi</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        header, section, footer {
+            margin-bottom: 20px;
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        h1 {
+            border-bottom: 2px solid #333;
+            padding-bottom: 5px;
+            margin-bottom: 20px;
+        }
+        section {
+            max-width: 800px;
+        }
+        p {
+            margin-bottom: 15px;
+        }
+    </style>
 </head>
-<body class="blue-grey lighten-5">
+<body>
 
-  <nav>
-    <div class="nav-wrapper blue darken-2">
-      <a href="#" class="brand-logo">Il Tuo Nome</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="#">Chi Sono</a></li>
-        <li><a href="#">Progetti</a></li>
-        <li><a href="#">Contattami</a></li>
-      </ul>
-    </div>
-  </nav>
+    <header>
+        <h1>SubTerane - Writer di Testi</h1>
+        <p>Benvenuto nel mio portfolio! Sono appassionato di trasformare idee complesse in testi chiari e coinvolgenti per la community degli sviluppatori.</p>
+    </header>
 
-  <div class="container">
-    <h1 class="center-align">Web Developer</h1>
+    <section>
+        <h2>Articoli Tecnici</h2>
+        <p>Leggi i miei articoli approfonditi su temi tecnici, da linguaggi di programmazione a framework all'avanguardia. Ho la capacità di rendere comprensibili anche i concetti più complessi.</p>
+    </section>
 
-    <div class="row">
-      <div class="col s12 m6">
-        <div class="card blue-grey darken-1">
-          <div class="card-content white-text">
-            <span class="card-title">Proge111tto 1</span>
-            <p>Descrizione del progetto 1.</p>
-          </div>
-          <div class="card-action">
-            <a href="#">Dettagli</a>
-          </div>
-        </div>
-      </div>
+    <section>
+        <h2>Documentazione</h2>
+        <p>Ho contribuito alla creazione di documentazione dettagliata per progetti open source e aziendali. La mia precisione e chiarezza assicurano una comprensione completa per gli sviluppatori di tutti i livelli.</p>
+    </section>
 
-      <div class="col s12 m6">
-        <div class="card blue-grey darken-1">
-          <div class="card-content white-text">
-            <span class="card-title">Progetto 2</span>
-            <p>Descrizione del progetto 2.</p>
-          </div>
-          <div class="card-action">
-            <a href="#">Dettagli</a>
-          </div>
-        </div>
-      </div>
-    </div>
+    <section>
+        <h2>Guide e Recensioni</h2>
+        <p>Esplora le mie guide pratiche e recensioni su strumenti e risorse per lo sviluppo software. Fornisco valutazioni sincere e consigli utili per la community.</p>
+    </section>
 
-  </div>
-
-  <footer class="page-footer blue darken-2">
-    <div class="container">
-      <p class="center-align white-text">&copy; 2023 Il Tuo Nome. Tutti i diritti riservati.</p>
-    </div>
-  </footer>
-
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script>
-    $(document).ready(function(){
-      $('.sidenav').sidenav();
-    });
-  </script>
+    <footer>
+        <p>Contattami per collaborazioni o per discutere progetti interessanti!</p>
+        <p>Email: subterane.writer@example.com</p>
+    </footer>
 
 </body>
 </html>
